Explicitly add mixin example and client initializer

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ loom.platform=forge
 mcp_version=1.16.5-20210115.111550
 parchment_version=2022.03.06
 forge_version=1.16.5-36.2.42
-log4j_version=2.24.1
+log4j_version=2.24.3
 
 # Mod Properties
 mod_id=examplemod
@@ -22,3 +22,7 @@ mod_version=1.0.0
 
 # Dependency Properties
 jei_version=7.8.0.1012
+
+# Publishing Properties
+curseforge_project_id=
+modrinth_project_id=
