--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 repositories {
-	// Add repositories to retrieve artifacts from in here.
+	// Add repositories to retrieve artifacts from, here
 	mavenCentral()
 	flatDir {
 		dirs "libs"
@@ -57,9 +57,9 @@ tasks.withType(JavaCompile).configureEach {
 
 loom {
 	silentMojangMappingsLicense()
-	legacyForge {
-		// Uncomment the following line for mixin json configs.
-		//mixinConfig "${mod_id}.mixins.json"
+	forge {
+		// Specify mixin json configs here
+		mixinConfig "${mod_id}.mixins.json"
 	}
 
 	mixin.defaultRefmapName = "${mod_id}.refmap.json"
@@ -80,6 +80,7 @@ dependencies {
 	// Use an updated version of log4j
 	implementation "org.apache.logging.log4j:log4j-core:${log4j_version}"
 
+	// Minecraft dependencies, required
 	minecraft "com.mojang:minecraft:1.16.5"
 	mappings loom.layered {
 		mappings("de.oceanlabs.mcp:mcp_config:${mcp_version}@zip") {
@@ -132,7 +133,7 @@ sourcesJar {
 	manifest.attributes(manifestAttributes)
 }
 
-// Please refer to Mod Publish Plugin's documentation on how to use the plugin to upload projects to CurseForge/Modrinth.
+// Please refer to Mod Publish Plugin's documentation on how to use the plugin to upload projects to CurseForge/Modrinth
 publishMods {
 	file = remapJar.archiveFile
 	version = displayName = "1.16.5-${mod_version}"
@@ -140,4 +141,15 @@ publishMods {
 	type = ALPHA
 	modLoaders.add("forge")
 	additionalFiles.from(sourcesJar.archiveFile)
+
+	curseforge {
+		projectId = curseforge_project_id
+		accessToken = providers.gradleProperty("curseforge.token")
+		minecraftVersions.add("1.16.5")
+	}
+	modrinth {
+		projectId = modrinth_project_id
+		accessToken = providers.gradleProperty("modrinth.token")
+		minecraftVersions.add("1.16.5")
+	}
 }
